--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -6,6 +6,9 @@
 			#recipe_info
 				%h1= @recipe.title
 				%p.description= @recipe.description
+				%p
+					Submitted by
+					= @recipe.user.email
 
 	.row
 		.col-md-6
@@ -14,7 +17,6 @@
 				%ul
 					- @recipe.ingredients.each do |ingredient|
 						%li= ingredient.name
-
 		.col-md-6
 			#directions
 				%h2 Directions
@@ -25,5 +27,6 @@
 	.row
 		.col-md-12
 			= link_to "Back", root_path, class: "btn btn-default"
-			= link_to "Edit", edit_recipe_path, class: "btn btn-default"
-			= link_to "Delete", recipe_path, method: :delete, data: { confirm: "Are you sure you want to delete this recipe?" }, class: "btn btn-default"
+			- if user_signed_in?
+				= link_to "Edit", edit_recipe_path, class: "btn btn-default"
+				= link_to "Delete", recipe_path, method: :delete, data: { confirm: "Are you sure you want to delete this recipe?" }, class: "btn btn-default"
