--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,124 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+
+$red: #D86161;
+
+body {
+	background: rgb(235, 238, 243);
+}
+
+.main_content {
+	padding: 0 0 50px 0;
+}
+
+.alert {
+	padding: 15px;
+	margin-bottom: 20px;
+	border: 1px solid transparent;
+	border-radius: 5px;
+	background: white;
+	font-weight: bold;
+}
+
+
+.navbar {
+	margin-bottom: 50px;
+	border: none;
+	.navbar-brand {
+		letter-spacing: -1px;
+		font-weight: bold;
+		font-size: 25px;
+		a {
+			color: $red;
+		}
+	}
+}
+
+.recipe {
+	background: white;
+	border-radius: 5px;
+	margin-bottom: 40px;
+	.image_wrapper {
+		max-width: 100%;
+		border-radius: 5px 5px 0 0;
+		overflow: hidden;
+	}
+	img {
+		width: 100%;
+		transition: all .75s ease-out;
+		&:hover {
+			transform: scale(1.075);
+		}
+	}
+	h2 {
+		padding: 15px 5%;
+		margin: 0;
+		font-size: 20px;
+		font-weight: normal;
+		line-height: 1.5;
+		a {
+			color: $red;
+		}
+	}
+}
+
+#recipe_top {
+	margin-bottom: 50px;
+}
+
+#recipe_info, #ingredients, #directions {
+	background: white;
+	min-height: 360px;
+	border-radius: 5px;
+	padding: 2em 8%;
+}
+
+.recipe_image {
+	max-width: 100%;
+	border-radius: 5px;
+}
+
+#recipe_info {
+	h1 {
+		font-size: 36px;
+		font-weight: normal;
+		color: $red;
+	}
+	.description {
+		color: #8A8A8A;
+		font-size: 20px;
+	}
+}
+
+#ingredients, #directions {
+	margin-bottom: 50px;
+	ul, ol {
+		padding-left: 18px;
+	}
+		li {
+			padding: 1em 0;
+			border-bottom: 1 px solid #EAEAEA;
+		}
+}
+
+.form-inline {
+	margin-top: 15px;
+}
+
+.form-input {
+	width: 65% !important;
+	float: left;
+}
+
+.form-button {
+	float: left;
+	width: 30% !important;
+	margin-left: 5%
+}
+
+.add-button {
+	margin-top: 25px;
+}
