--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,9 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand= link_to "Momma Knows Best", root_path
+			.navbar-brand
+				= link_to "Momma Knows Best", root_path
+
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
 					%li= link_to "New Recipe", new_recipe_path
@@ -25,6 +27,3 @@
 			= content_tag :div, msg, class: "alert"
 		
 		= yield
-
-
-
