--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ body {
 		color: white;
 		letter-spacing: -1px;
 		font-weight: bold;
-		font-size: 25px;
+		font-size: 30px;
 		a {
 			color: white;
 			text-decoration: none;
@@ -63,6 +63,10 @@ body {
 
 .recipe {
 	box-shadow: 7px 7px 3px #888888;
+	&:hover {
+		transition: .3s ease-in;
+		box-shadow: none;
+		}
 	background: white;
 	border-radius: 5px;
 	margin-bottom: 40px;
@@ -77,7 +81,6 @@ body {
 		transition: all .75s ease-out;
 		&:hover {
 			transform: scale(1.075);
-			box-shadow: -7px -7px -3px #888888;
 		}
 	}
 	h2 {
@@ -86,8 +89,11 @@ body {
 		font-size: 20px;
 		font-weight: normal;
 		line-height: 1.5;
+		text-align: center;
+
 		a {
 			color: $red;
+			text-decoration: none;
 		}
 	}
 }
@@ -149,3 +155,24 @@ body {
 .add-button {
 	margin-top: 25px;
 }
+
+
+/* Sign In and Sign Up */
+.col-md-6 .col-md-offset-3 {
+	h2, label {
+		color: $red !important;
+	}
+	
+}
+
+h1, h2, h3 {
+	color: #D86161;
+}
+
+
+
+
+
+
+
+
