--- a/app/views/recipes/new.html.haml
+++ b/app/views/recipes/new.html.haml
@@ -1,7 +1,12 @@
-%h1 New Recipe
+%h1.new
+  New Recipe
 
 = render 'form'
 
 %br/
 
-= link_to "Back", root_path, class: "btn btn-default"
+= link_to "Back", root_path, class: "btn btn-default margins"
+
+%p.space
+
+
