--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,14 +7,16 @@
 
 		  	<div class="form-inputs">
 		    	<%= f.input :email, required: true, autofocus: true, input_html: { class: "form-control" } %>
+		    	<br>
 		    	<%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { class: "form-control" } %>
+		    	<br>
 		    	<%= f.input :password_confirmation, required: true, input_html: { class: "form-control" } %>
 		  	</div>
 			<br>
 		  	<div class="form-actions">
 		    	<%= f.button :submit, "Sign Up", class: "btn btn-primary" %>
 		  	</div>
-		  	<br>
+		  	<p class="space"></p>
 		<% end %>
 
 		<%= render "devise/shared/links" %>
