--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 	%nav.navbar.navbar-default
 		.container
 			.navbar-brand
-				= link_to "Momma Knows Best", root_path
+				= link_to image_tag("momma_knows_best.png", alt: "Momma Knows Best"), root_path, :class=>"logo"
 
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
