--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,12 @@
 !!! 5
 %html
 %head
-	%title Momma Knows Best
+	%title Momma Knows Best!
 	= stylesheet_link_tag 'application', media: 'all'
 	= stylesheet_link_tag 'recipes', media: 'all'
 	= javascript_include_tag 'application'
 	= csrf_meta_tags
+	%link{:href => "logo.png", :rel => "icon", :type => "image/png"}/
 
 %body
 	%nav.navbar.navbar-default
