remove text from nested forms for ingredients and directions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -212,6 +212,14 @@ a {
     position: relative;
     top: -15px;
 }
+
+.nested-fields {
+	label {
+		text-indent: 100%;
+    	white-space: nowrap;
+    	overflow: hidden;
+	}
+}
 	
 
 
