--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
 	%title Momma Knows Best!
-	%link{:href => "assets/images/logo.png", :rel => "icon", :type => "image/png"}/
+	%link{:href => "favicon.png", :rel => "icon", :type => "image/png"}/
 	= stylesheet_link_tag 'application', media: 'all'
 	= stylesheet_link_tag 'recipes', media: 'all'
 	= javascript_include_tag 'application'
