--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
 	%title Momma Knows Best!
-	%link{:href => "favicon.png", :rel => "icon", :type => "image/png"}/
+	%link{:href => "app/assets/images/favicon.png", :rel => "shortcut icon"}/
 	= stylesheet_link_tag 'application', media: 'all'
 	= stylesheet_link_tag 'recipes', media: 'all'
 	= javascript_include_tag 'application'
